<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InventoryActivity"
    tools:ignore="NestedWeights"
    >

    <!-- BT Warning -->
    <TextView
        android:id="@+id/bluetooth_permissions_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="0dp"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/bt_permission"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="11sp"
        android:visibility="gone"
        />

    <!-- Tags and Barcodes -->
    <LinearLayout
        android:id="@+id/resultLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#eef"
        android:orientation="vertical"
        android:layout_weight="2"
        >

        <!-- Tag summary -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal"
            android:background="#cce"
            >
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="1"
                android:text="@string/tag_list_title"
                android:textColor="#000"
                android:layout_marginEnd="12dp"
                />
            <TextView
                android:id="@+id/totalTagsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="---"
                />
        </LinearLayout>

        <ListView
            android:id="@+id/resultListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="4"
            >
        </ListView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#cce"
            android:text="@string/barcode_list_title"
            android:textColor="#000" />

        <ListView
            android:id="@+id/barcodeListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
        </ListView>
    </LinearLayout>


    <!-- Options -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0"
        android:layout_marginBottom="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            >
            <CheckBox
                android:id="@+id/tagInfoCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_info_title"
                android:textColor="#0D47A1"
                android:minHeight="44dp"
                />
            <CheckBox
                android:id="@+id/fastIdCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_fast_id_title"
                android:textColor="#0D47A1"
                android:minHeight="44dp"
                />
            <CheckBox
                android:id="@+id/uniquesCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uniques_only_title"
                android:textColor="#0D47A1"
                android:minHeight="44dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <Spinner
                android:id="@+id/rfModeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                />
            <Spinner
                android:id="@+id/sessionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                android:layout_marginBottom="12dp"
                />
            <!-- Max Tags -->
            <TextView
                android:id="@+id/maxTagsLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_tags_label_text"
                android:maxLines="1"/>
            <EditText
                android:id="@+id/maxTagsValueEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:inputType="number"
                android:minWidth="96dp"
                android:selectAllOnFocus="true">

            </EditText>
        </LinearLayout>
    </LinearLayout>

    <!-- Power control -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0"
        >
        <SeekBar
            android:id="@+id/powerSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/powerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_level_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="0"
            />
    </LinearLayout>

    <!-- Messages -->
    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#A00"
        android:textSize="16sp"
        />


    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0"
        >
        <Button
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_start_button_text"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_button_text"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/scanStopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_stop_button_text" />
    </LinearLayout>


</LinearLayout>